# credit_scoring

./: EDA.ipynb  Feature_selection.ipynb  README.md  Train_model.ipynb  docker-compose.yaml  dockerfile  download_data.sh  features_list.txt  pyproject.toml  requirements.txt  task  test_curl.sh  utils.py
service/: loader.py  main.py  predictor.py  preprocessor.py
test_data/: test_data.parquet
